--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello, world.</h1>
+    <button id="req-spotify-token">Request Spotify Token</button>
     <script src="js/script.js" type="module"></script>
   </body>
 </html>
