--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hello, world.</h1>
     <button id="req-spotify-token">Request Spotify Token</button>
+    <script src="https://unpkg.com/jso/dist/jso.js"></script>
     <script src="js/script.js" type="module"></script>
   </body>
 </html>
