add spotify.js to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <button id="req-spotify-token">Request Spotify Token</button>
     <script src="https://unpkg.com/jso/dist/jso.js"></script>
     <script src="js/script.js" type="module"></script>
+    <script src="js/spotify.js" type="module"></script>
   </body>
 </html>
