--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <h1>Hello, world.</h1>
-    <button id="req-spotify-token">Request Spotify Token</button>
-    <script type="text/javascript" src="https://unpkg.com/jso/dist/jso.js"></script>
+    <button id="access-spotify">Send OAuth2 request to Spotify</button>
     <script src="js/spotify.js" type="module"></script>
   </body>
 </html>
