--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                             <p class="title is-1 is-spaced has-text-grey-darker ">Lyric Look-up</p>
                              <p class="subtitle is-4 is-italic has-text-grey-darker">Sing along to your favorite song</p>
                          <div class="field is-grouped ">
-                     <div class="control  is-expanded">
-                    <input class="input is-hovered " type="text" placeholder="Enter Song">
+                     <div class="control has-icons-left is-expanded">
+                    <input class="input is-hovered " type="text" placeholder="Enter song title">
+                    <span class="icon is-small is-left">
+                    <i class="fas fa-music"></i>
+                    </span>
                      </div>
                 <div class="control">
              <button class="button is-warning">Search</button>
