--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
                              <p class="subtitle is-4 is-italic has-text-grey-darker">Sing along to your favorite song</p>
                          <div class="field is-grouped ">
                      <div class="control  is-expanded">
-                    <input class="input is-hovered " type="text" placeholder="Enter Song">
+                    <!--<input class="input is-hovered " type="text" placeholder="Enter Song">-->
                      </div>
                 <div class="control">
-             <button class="button is-warning">Search</button>
+             <button class="button is-warning" id="access-spotify">Connect to Spotify</button>
             </div>
         </div>
     </div>
     </section>
-        
     </body>
-    <script src="" async defer></script>
+    <script src="assets/js/spotify.js" type="module"></script>
 </html>
