--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                      </div>
                 <div class="control">
              <button class="button is-warning" id="search-button">Search</button>
+             <button class="button is-warning" id="access-spotify">Connect to Spotify</button>
             </div>
         </div>
     </div>
     </section>
-        
     </body>
     <script src="./script.js" async defer></script>
+    <script src="assets/js/spotify.js" type="module"></script>
 </html>
