--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                           <div class="column is-8 is-offset-2">
                             <div class="box">
                             <p class="title is-1 is-spaced has-text-grey-darker ">Lyric Look-up</p>
-                             <p class="subtitle is-4 is-italic has-text-grey-darker">Sing along to your favorite song</p>
+                             <p class="subtitle is-4 is-italic has-text-grey-darker">"Sing along to your favorite song"</p>
                          <div class="field is-grouped ">
                      <div class="control has-icons-left is-expanded">
                     <input class="input is-hovered " type="text" placeholder="Enter song title">
