--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </div>
     </section>
     </body>
-    <script src="./script.js" async defer></script>
+    <script src="./assets/js/script.js" async defer></script>
     <script src="assets/js/spotify.js" type="module"></script>
 </html>
