added js to create html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                  <span class="button-title"> Connect to Spotify </span>
                 </a>
             </div>
+            <div class="lyrics-container">
+                
+            </div>
         </div>
     </div>
     </section>
