centered button and moved lyric container

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                 </a>
               </div>
             </div>
-            <div class="lyrics-container">
-                
-            </div>
+
+      <!-- Now playing -->
             <div class="box now-playing is-hidden">
               <figure class="image">
                 <img />
@@ -53,6 +52,10 @@
                   </tr>
                 </tbody>
               </table>
+      <!-- Lyric container -->
+              <div class="lyrics-container">
+                
+            </div>
             </div>
           </div>
         </div>
