--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <!-- Hero -->
-    <section class="hero-head is-bold is-fullheight has-text-centered has-text-center-mobile is-size-1-mobile">
-      <div class="hero-body">
-        <div class="container has has-text-centered">
-          <div class="column is-8 is-offset-2">
-            <div class="box">
+    <!-- Top tile -->
+    <section class=" is-bold is-fullheight has-text-centered has-text-center-mobile">
+      <div class= "container is-ancestor is-size-1-mobile">
+      <div class=" tile is-vertical is-parent">
+          <!-- <div class="column is-8 is-offset-2"> -->
+            <div class="tile is-child  first-tile">
               <p class="title is-1 is-spaced has-text-grey-darker">Lyric Look-up</p>
               <p class="subtitle is-4 is-italic has-text-grey-darker">"Sing along to your favorite song"</p>
-              <div class="field is-grouped">
-                <a class="button is-warning" id="access-spotify">
+              <div class="field is-grouped level item">
+                <a class="button is-warning " id="access-spotify">
                   <span class="icon mx-1">
                     <i class="fab fa-spotify"></i>
                   </span>
@@ -31,12 +31,12 @@
               </div>
             </div>
 
-      <!-- Now playing -->
-            <div class="box now-playing is-hidden">
+      <!-- Now playing  Tile -->
+            <div class=" tile is-parent box now-playing is-hidden ">
               <figure class="image">
                 <img />
               </figure>
-              <table class="table is-fullwidth mx-3">
+              <table class="table is-fullwidth mx-3 ">
                 <tbody>
                   <tr>
                     <th class="has-text-right">Artist(s):</th>
@@ -52,14 +52,13 @@
                   </tr>
                 </tbody>
               </table>
-      <!-- Lyric container -->
-              <div class="lyrics-container">
-                
             </div>
+          <!-- Lyric container -->
+              <div class="tile is-parent lyrics-container ">
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </section>
     <script src="https://kit.fontawesome.com/08ffba74b7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js" async defer></script>
