quick mobile responsiveness hack

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
               </div>
             </div>
 
-      <!-- Now playing -->
+            <!-- Now playing -->
+            <div class="lyrics-container"></div>
             <div class="box now-playing is-hidden">
               <figure class="image">
                 <img />
               </figure>
-              <table class="table is-fullwidth mx-3">
+              <table class="table mx-3 is-size-6-touch">
                 <tbody>
                   <tr>
                     <th class="has-text-right">Artist(s):</th>
@@ -52,10 +53,8 @@
                   </tr>
                 </tbody>
               </table>
-      <!-- Lyric container -->
-              <div class="lyrics-container">
-                
-            </div>
+              <!-- Lyric container -->
+              <div class="lyrics-container"></div>
             </div>
           </div>
         </div>
