--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
   </head>
   <body>
     <!-- Top tile -->
-    <section class=" is-bold is-fullheight has-text-centered is-mobile">
-      <div class= "container is-ancestor is-size-1-mobile">
+    <section class=" is-bold is-fullheight has-text-centered ">
+      <div class= "container is-ancestor column is-three-quarters-mobile is-mobile ">
       <div class=" tile is-vertical is-parent ">
           <!-- <div class="column is-8 is-offset-2"> -->
-            <div class="tile is-child  first-tile box">
+            <div class="tile is-child  first-tile box ">
               <p class="title is-1 is-spaced has-text-grey-darker">Lyric Look-up</p>
               <p class="subtitle is-4 is-italic has-text-grey-darker">"Sing along to your favorite song"</p>
-              <div class="field is-grouped level item">
+              <div class="field is-grouped  is-three-quarters-mobile">
                 <a class="button is-warning " id="access-spotify">
                   <span class="icon mx-1">
                     <i class="fab fa-spotify"></i>
                   </span>
-                  <span class="button-title"> Connect to Spotify </span>
+                  <span class="button-title level is-mobile"> Connect to Spotify </span>
                 </a>
               </div>
             </div>
 
       <!-- Now playing  Tile -->
-            <div class=" tile is-parent box now-playing is-hidden is-mobile ">
-              <figure class="image">
+            <div class=" tile is-parent box now-playing is-three-quarters-mobile  is-hidden ">
+              <figure class="image ">
                 <img />
               </figure>
-              <table class="table is-fullwidth mx-3 ">
+              <table class="table mx-3 ">
                 <tbody mobile>
                   <tr>
                     <th class="has-text-right">Artist(s):</th>
@@ -53,8 +53,8 @@
                 </tbody>
               </table>
             </div>
-          <!-- Lyric container -->
-              <div class="tile is-parent lyrics-container box is-mobile">
+          <!-- Lyric Tile -->
+              <div class="tile is-parent box lyrics-container">
             </div>
           </div>
         </div>
