fixed image responsiveness for 375x812

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <!-- Now playing  Tile -->
             <div class=" tile is-parent box now-playing is-three-quarters-mobile  is-hidden ">
-              <figure class="image ">
+              <figure class="image responsive" >
                 <img />
               </figure>
               <table class="table mx-3 ">
