hide lyrics container if nothing is playing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             </div>
 
             <!-- Now playing -->
-            <div class="lyrics-container"></div>
             <div class="box now-playing is-hidden">
               <figure class="image">
                 <img />
@@ -54,7 +53,7 @@
                 </tbody>
               </table>
               <!-- Lyric container -->
-              <div class="lyrics-container"></div>
+              <div class="box lyrics-container is-hidden"></div>
             </div>
           </div>
         </div>
