--- a/index.html
+++ b/index.html
@@ -14,51 +14,47 @@
   </head>
   <body>
     <!-- Hero -->
-    <section class="hero-head is-bold is-fullheight has-text-centered has-text-center-mobile is-size-1-mobile">
-      <div class="hero-body">
-        <div class="container has has-text-centered">
-          <div class="column is-8 is-offset-2">
-            <div class="box">
-              <p class="title is-1 is-spaced has-text-grey-darker">Lyric Look-up</p>
-              <p class="subtitle is-4 is-italic has-text-grey-darker">"Sing along to your favorite song"</p>
-              <div class="field is-grouped">
-                <a class="button is-warning" id="access-spotify">
-                  <span class="icon mx-1">
-                    <i class="fab fa-spotify"></i>
-                  </span>
-                  <span class="button-title"> Connect to Spotify </span>
-                </a>
-              </div>
-            </div>
-
-            <!-- Now playing -->
-            <div class="box now-playing is-hidden">
-              <figure class="image">
-                <img />
-              </figure>
-              <table class="table mx-3 is-size-6-touch">
-                <tbody>
-                  <tr>
-                    <th class="has-text-right">Artist(s):</th>
-                    <td class="artist has-text-left"></td>
-                  </tr>
-                  <tr>
-                    <th class="has-text-right">Album:</th>
-                    <td class="album has-text-left"></td>
-                  </tr>
-                  <tr>
-                    <th class="has-text-right">Track:</th>
-                    <td class="track has-text-left"></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <!-- Lyric container -->
-            <div class="box lyrics-container is-hidden"></div>
+    <div class="columns has-text-centered">
+      <div class="column is-8 is-offset-2">
+        <div class="box">
+          <p class="title is-1 is-spaced has-text-grey-darker">Lyric Look-up</p>
+          <p class="subtitle is-4 is-italic has-text-grey-darker">"Sing along to your favorite song"</p>
+          <div class="field is-grouped">
+            <a class="button is-warning" id="access-spotify">
+              <span class="icon mx-1">
+                <i class="fab fa-spotify"></i>
+              </span>
+              <span class="button-title"> Connect to Spotify </span>
+            </a>
           </div>
         </div>
+
+        <!-- Now playing -->
+        <div class="box now-playing is-hidden">
+          <figure class="image">
+            <img />
+          </figure>
+          <table class="table mx-3 is-size-6-touch">
+            <tbody>
+              <tr>
+                <th class="has-text-right">Artist(s):</th>
+                <td class="artist has-text-left"></td>
+              </tr>
+              <tr>
+                <th class="has-text-right">Album:</th>
+                <td class="album has-text-left"></td>
+              </tr>
+              <tr>
+                <th class="has-text-right">Track:</th>
+                <td class="track has-text-left"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- Lyric container -->
+        <div class="box lyrics-container is-hidden"></div>
       </div>
-    </section>
+    </div>
     <script src="https://kit.fontawesome.com/08ffba74b7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js" async defer></script>
     <script src="./assets/js/spotify.js" async defer type="module"></script>
